# docs/swagger.json
@@ -65,7 +65,7 @@
                 }
             }
         },
-        "/api/missions/delete_module/{module_id}": {
+        "/api/missions/delete_module/{id}": {
             "delete": {
                 "description": "Удалить модуль из черновой миссии",
                 "produces": [
@@ -79,7 +79,7 @@
                     {
                         "type": "string",
                         "description": "id модуля",
-                        "name": "module_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -108,7 +108,7 @@
                 }
             }
         },
-        "/api/missions/{mission_id}": {
+        "/api/missions/{id}": {
             "get": {
                 "description": "Возвращает подробную информацию о миссии",
                 "produces": [
@@ -122,7 +122,7 @@
                     {
                         "type": "string",
                         "description": "id миссии",
-                        "name": "mission_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -149,7 +149,7 @@
                     {
                         "type": "string",
                         "description": "id миссии",
-                        "name": "mission_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -191,7 +191,7 @@
                 }
             }
         },
-        "/api/missions/{mission_id}/moderator_confirm": {
+        "/api/missions/{id}/moderator_confirm": {
             "put": {
                 "description": "Подтвердить или отменить миссию модератором",
                 "produces": [
@@ -205,7 +205,7 @@
                     {
                         "type": "string",
                         "description": "id миссии",
-                        "name": "mission_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -314,7 +314,7 @@
                 }
             }
         },
-        "/api/modules/{module_id}": {
+        "/api/modules/{id}": {
             "get": {
                 "description": "Возвращает более подробную информацию об одном модуле",
                 "produces": [
@@ -328,7 +328,7 @@
                     {
                         "type": "string",
                         "description": "id модуля",
-                        "name": "module_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -358,7 +358,7 @@
                     {
                         "type": "string",
                         "description": "Идентификатор модуля",
-                        "name": "module_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -416,7 +416,7 @@
                     {
                         "type": "string",
                         "description": "id модуля",
-                        "name": "module_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -428,7 +428,7 @@
                 }
             }
         },
-        "/api/modules/{module_id}/add_to_mission": {
+        "/api/modules/{id}/add_to_mission": {
             "post": {
                 "description": "Добавить выбранный модуль в черновик миссии",
                 "produces": [
@@ -442,7 +442,7 @@
                     {
                         "type": "string",
                         "description": "id модуля",
-                        "name": "module_id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
